# Python-Web-21

./: .gitignore  pyproject.toml
Homework-2/: Pipfile  dockerfile  requirements.txt  setup.py
Homework-2/src/: classes.py  handlers.py
Homework-3/: factorize.py  sorter.py
Homework-4/: main.py
Homework-5/: main.py
Homework-6/: create_tables.py  insert_data.py  main.py  query_11(+).sql  query_12(+).sql  query_3.sql  query_5.sql  query_9.sql  school.db
Homework-6/queries/: query_10.sql  query_2.sql  query_6.sql  query_7.sql  query_8.sql
Homework-7/: alembic.ini
Homework-7/alembic/: env.py
Homework-7/app/: db.py
Homework-8/: load_data.py  models.py  search_quotes.py
Homework-8/Rabbit/: consumer.py  models.py  producer.py
Test5/: main.py
src/: setup.py
src/src/: classes.py  cleaner.py  handlers.py  main.py
